<resources>
    <string name="app_name">WeatherBoy</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="weather_fragment_title" translatable="false">What should I wear?</string>
    <string name="next_week">Next week</string>
    <string name="search_hint">Search your city...</string>

    <!-- Volley error helper  -->
    <string name="generic_error">generic_error</string>
    <string name="generic_server_down">generic_server_down</string>
    <string name="no_internet">Sorry...No internet.</string>

    <string name="title_activity_settings">Settings</string>
    <string name="metric">Metric</string>
    <string name="celsium">Celsium</string>
    <string name="your_city">Your city</string>
    <string name="auto_background_change">Auto background change</string>
    <string name="change_background_due_to_weather">Change background due to weather</string>

    <string name="pick_metric">Pick metric</string>
    
    <string-array name="metrics_array">
        <item>Celsium</item>
        <item>Kelvin</item>
        <item>Fahrenheit</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
