<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.leo_art.weatherboy.activity.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_hero"
            android:layout_width="match_parent"
            android:layout_height="400dp" />

        <TextView
            android:id="@+id/tv_metric"
            android:text="@string/metric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_metric_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/celsium"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/grey"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/your_city"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="16sp"
            android:text="Lviv" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/grey"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/auto_background_change"
                android:textSize="24sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cb_background_auto_change"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/change_background_due_to_weather"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/grey"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>


</ScrollView>
